--- a/src/style.css
+++ b/src/style.css
@@ -58,4 +58,45 @@ a {
     width: 10%;
 }
 
+/* -------------------- */
+.hide {
+    display: none;
+}
 
+/* ----------------------- */
+table, th, td {
+    border: 1px solid black;
+}
+
+table {
+    border-collapse: collapse;
+    margin-top: 80px;
+    margin-left: 20%;
+    width: 50%;
+}
+
+th {
+    background-color: rgb(240, 240, 240);
+}
+
+td {
+    text-align: center;
+}
+
+/* ------------------------ */
+.myInfo {
+    text-align: center;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+.myInfo img {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    height: 150px;
+    width: 200px;
+}
+
+.head {
+    font-weight: bold;
+}
